// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list_files when getItems throws an error rejects with the error 1`] = `"NOOOOOO"`;

exports[`list_files with no page_size or offset passes in correct default parameters 1`] = `
Object {
  "fields": "name",
  "limit": 10,
  "offset": 0,
}
`;

exports[`list_files with page_size and offset passes in correct parameters 1`] = `
Object {
  "fields": "name",
  "limit": 13,
  "offset": 25,
}
`;
